fix overlay z-index issues

--- a/web/modal.css
+++ b/web/modal.css
@@ -10,6 +10,7 @@
 	transition: opacity 200ms;
 	visibility: hidden;
 	opacity: 0;
+	z-index: 1;
 }
 
 .overlay .cancel {
@@ -20,33 +21,6 @@
 }
 
 .overlay:target {
-	visibility: visible;
-	opacity: 1;
-}
-.overlayGemModalWorkshop {
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background: rgba(255, 255, 255, 0.75);
-	transition: opacity 200ms;
-	z-index: 999;
-	visibility: hidden;
-	opacity: 0;
-}
-#workshopGemModalClose {
-	top: 10px;
-    font-size: 40px;
-}
-.overlayGemModalWorkshop .cancel {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	cursor: default;
-}
-
-.overlayGemModalWorkshop:target {
 	visibility: visible;
 	opacity: 1;
 }
